reordering methods and notation changes, close to complete

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -14,6 +14,7 @@
     \usepackage{pdfpages}
     \usepackage[margin=20mm]{geometry} % set exact margins 
     \usepackage{caption} % allows doublespacing of captions
+    \usepackage{hyperref} % allows adding urls
     \captionsetup{font=doublespacing}
 
 % REFERENCES
@@ -143,7 +144,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \label{meth:nddm}    
 
         \paragraph{}
-        The strengths of interactions are quantified by regressing the performance of a species  - alternatively, a population or any chosen set of replicated units - against the density and identity of other interacting species in a neighbour-density dependent model (NDDM).  Increases or decreases in a species's performance is thus attributed to the changing densities of its interaction partners. 
+        The strengths of interactions are quantified by regressing the performance of a species  - alternatively, a population or any chosen set of replicated units - against the density and identity of other interacting species in a neighbour-density dependent model (NDDM).  Increases or decreases in a species's performance are thus attributed to the changing densities of its interaction partners. 
 
         \paragraph{}
         We implement a NDDM for each focal species $i$ which regresses the identity and density of species $j$ ($j = 1, ..., t$) against the measured proxy for performance $p_{k}$ through a link function $f$:
@@ -152,43 +153,41 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         \label{nddm}
         \end{equation}
 
-        The parameters $\beta_{d_k,j}$ capture the effect of each species $j$ on $i$ whereas the intercept $\gamma_{d_k}$ represents intrinsic performance (in the link scale), a species' performance in the absence of interactions or when all interaction effects are $0$. Note that interacting species $j$ can include members of focal species $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal species (competitive) or beneficial (facilitative). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative.
+        The parameters $\beta_{d_k,j}$ capture the effect of each species $j$ on $i$ whereas the intercept $\gamma_{d_k}$ represents intrinsic performance (in the link scale), a species' performance in the absence of interactions or when all interaction effects are $0$. Note that interacting species $j$ can include members of focal species $i$ itself, in which case intraspecific interactions are denoted as $\beta_{d_k,i}$. Furthermore, the equation above places no restrictions on the sign of $\beta_{d_k, j}$: interactions can be harmful to the focal species (competitive) or beneficial (facilitative). The negative sign in front of $\beta$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative.
 
         \paragraph{}
-        This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $p_k$ and the right-hand side of the equation does not need to be linear. This can easily be changed by choosing an appropriate link function $f(p_k)$ for the data in question. In our case study, for example, we use the link function $f(p_k) = \ln(p_k)$ since we model our response variable as a negative-binomial variate.
+        This model, as well as the RIM described below (in \ref{meth:rim}), are implemented as generalised linear models. This means that the relationship between $p_k$ and the right-hand side of the equation does not need to be linear. This can easily be changed by choosing an appropriate link function $f(p_k)$ for the data in question. In our case study, for example, we use the link function $f(p_k) = \ln(p_k)$ since we model our response variable as a negative-binomial variate.
               
 
-    \subsection{Identifying identifiable and unidentifiable interactions}
+    \subsection{Defining identifiable and unidentifiable interaction parameters}
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some elements may not be observed to interact with many other elements or to interact at sufficiently variable densities because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. 
-
-    The aim of the joint framework is to estimate $B$, the $s \times t$ matrix of interactions between all focal elements $i$ and interacting elements $j$. [[DBS: Isn't it also to estimate the intercept? Or even better, to estimate the parameters of a model of density-dependent performance, full stop?]] 
-
-
-    The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
-    For an interaction $\beta_{ij}$ to be inferrable, and thus identifiable, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of densities of other elements interacting with $i$. For example, if two elements $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{ia}$ nor $\beta_{ib}$ will be inferrable. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ parameter is identifiable, and $Q_{ij} = 0$ if not. How we to mathematically construct this $Q$ matrix is shared in the code for the publically available github repository associated to this paper.
-
+    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interaction parameters ($\beta_{d_k, j}$), especially for rare species. For an interaction parameter to be \textit{identifiable}, and thus estimated by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{d_k, a}$ nor $\beta_{d_k, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ parameter is identifiable, and $Q_{ij} = 0$ if not. How we to mathematically construct this $Q$ matrix is shared in the code for the publically available github repository associated to this paper.
     
-    
-    \subsection{Unidentifiable interactions}
+    \subsection{Unidentifiable parameters and the response-impact model}
     \label{meth:rim}
 
     \paragraph{}
-    It has previously been shown that these \textit{unidentifiable} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact ($e_i$) on and a singular response ($r_i$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unidentifiable interaction is therefore the product of two elements' impact and response parameters. 
+    Estimating unidentifiable interaction parameters is a complex challenge for which no single answer exists. Here, we address the issue by using an alternative model which assumes that species typically have a singular impact ($e_i$) on and a singular response ($r_i$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unidentifiable interaction parameter is therefore the product of two species' impact and response parameters. 
+
         \begin{equation}
-        f(p_{i}) = \beta_{i0} - r_{i} \sum_{j=1}^{k} e_{j} N_{j}
+        f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
         \label{rim}
         \end{equation}
-        Pairwise interactions which cannot be inferred from Eq.~\ref{nddm} can be approximated by Eq.~\ref{rim} by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. Once again, to fit the RIM the densities of element $j$ must be linearly independent to the others, but across the entire $X$ matrix (as opposed to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of obervations for each focal $i$).
+
+    Pairwise interactions which cannot be inferred from Eq.~\ref{nddm} can be approximated by Eq.~\ref{rim} by multiplying the relevant $r_{d_k}$ and $e_{j}$ such that $\beta_{d_k, j} = r_{d_k} e_{j}$. Once again, to fit the RIM the densities of element $j$ must be linearly independent to the others, but across the entire $X$ matrix (as opposed to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of obervations for each focal $i$).
 
 
     \subsection{Joining the two models}
     \label{meth:addlog}
 
+
+    %The aim of the joint framework is to estimate $B$, the $s \times t$ matrix of interactions between all focal elements $i$ and interacting elements $j$. [[DBS: Isn't it also to estimate the intercept? Or even better, to estimate the parameters of a model of density-dependent performance, full stop?]] 
+    %The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
+
     \paragraph{}
-    An approximation of the matrix of interactions $B$ is thus given by:
+    The interaction parameters returned by Eqs. \ref{nddm} and \ref{rim}can be used to construct a matrix of pairwise species interactions $B$ of size $s \times t$, where the effect of species $j$ on focal species $i$ corresponds to the $i$'th row and the $j$'th column of $B$. An approximation of the matrix of interactions $B$ is thus given by:
 
         \begin{equation}
         B = Q \circ \tilde B + (1 - Q) \circ r e^T
@@ -196,7 +195,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         \end{equation}
 
     
-    where $\circ$ represents the elementwise (Hadamard) product, $Q$ the matrix of identifiable interactions, and $\tilde B$ is an $s \times k$ matrix that only has free parameters inferred in the locations where $Q_{ij} =1$. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$, when that parameter is not. Both the NDDM and RIM  contribute to the overall joint model log likelihood:
+    where $\circ$ represents the elementwise (Hadamard) product, $Q$ the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{ij} =1$. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_{d_k} e_j$, when that parameter is not. Both the NDDM and RIM  contribute to the overall joint model log likelihood:
 
          \begin{equation}
         \mathcal{L}_{joint} = \mathcal{L}_{RIM} + \mathcal{L}_{NDDM}
@@ -219,30 +218,30 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     where the sum is across all $n$ observations, $Pr$ is the probability density for the model (e.g. negative binomial), $p_k$ the vector of measured performances, $\gamma, r, e,$ and $B$ are parameters as defined in Eqs \ref{nddm} and \ref{rim}, and $'...'$ includes any other parameters (e.g. dispersion if using a negative binomial distribution for the data). Note that $p_k$ and $\gamma$ are common to both the RIM and NDDM.
 
     \paragraph{}
-    In a hypothetical world where all interactions in the observed dataset are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i \times e_j$ estimates when not.  An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, identifiable and unidentifiable. However, by maximising Eq.~\ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
+    In a hypothetical world where all interactions in the observed dataset are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_{d_k} \times e_j$ estimates when not.  An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, identifiable and unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
 
 
     \subsection{Rescaling interaction estimates into per-capita interactions}
 
-        The $\beta_{ij}$ estimates returned by the framework describe the effect of element $j$ on the performance of element $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between elements. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between elements, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $\beta_{d_k, j}$ estimates returned by the framework describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
         \begin{equation}
-        p_{i} = \beta_{i0} \left ( 1 - \sum_{j=1}^{k} {\beta_{ij}}'' N_{j} \right )
+        f(p_{k}) = \gamma_{d_k} \left ( 1 - \sum_{j=1}^{t} {\beta}''_{d_k, j} X_{d_k, j} \right )
         \label{LVform}
         \end{equation}
         This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient element's intrinsic performance:  
         \begin{equation}
-        {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
+        {\beta}''_{d_k, j} = \frac{\beta_{d_k, j}}{\gamma_{d_k}}
         \label{scaling}
         \end{equation}
-        where $\beta_{ij}$ can be replaced with $r_i e_j$ when appropriate. Though this scaling step is not strictly necessary, for ecological datasets per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
+        Though this scaling step is not strictly necessary, for ecological datasets per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
 
     \subsection{Integrating interaction strengths into models of population dynamics}
 
         \paragraph{}
-        In certain instances, models of element population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal elements $p_i$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of interacting elements on the desnity or growth rate of a focal element rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
+        In certain instances, models of species population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal species $p_{d_k}$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of interacting species on the density or growth rate of a focal species rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
 
         \paragraph{}
-        In both cases, an established population dynamic model is required as well as knowledge of any crucial element-specific demographic rates. This step is illustrated for our case study in the Supplementary Methods \ref{SI:popdyn}, where an annual plant population dynamic model is used to transform effects on wildflower seed production (the measured proxy for performance) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
+        In both cases, an established population dynamic model is required as well as knowledge of any crucial species-specific demographic rates. This step is illustrated for our case study in the Supplementary Methods \ref{SI:popdyn}, where an annual plant population dynamic model is used to transform effects on wildflower seed production (the measured proxy for performance) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
 
         % \paragraph{}
         % Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $P_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to their performance. [MOVE TO DISCUSSIO?]
@@ -251,11 +250,11 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Model fitting}
 
         \paragraph{}        
-        We implement the NDDM (Eq. \ref{nddm}), the RIM (Eq. \ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. \textbf{The most up-to-date versions of the code and data used for this manuscript are also available on our public  github repository: [insert link here].}
-        From the model file, only the link function for $p_i$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_i$) but a different distribution may be more appropriate when using other measures of performance.   
+        We implement the NDDM (Eq. \ref{nddm}), the RIM (Eq. \ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code used to specify and set this model to the case study below, as well as the necessary R scripts and functions to run the model on a simulated dataset on our public github repository \url{https://github.com/malbion/Methods_for_compnet}.
+        From the model file, only the link function for $p_{D_k}$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_{d_k}$) but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
-        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
+        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_{d_k}$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimates and the use of posterior distributions using a worked example on ant species richness data.
