--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -251,7 +251,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
         \paragraph{}        
         We implement the NDDM (Eq. \ref{nddm}), the RIM (Eq. \ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code used to specify and set this model to the case study below, as well as the necessary R scripts and functions to run the model on a simulated dataset on our public github repository \url{https://github.com/malbion/Methods_for_compnet}.
-        From the model file, only the link function for $p_{D_k}$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_{d_k}$) but a different distribution may be more appropriate when using other measures of performance.   
+        From the model file, only the link function for $p_{d_k}$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_{d_k}$) but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
         Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_{d_k}$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
@@ -270,34 +270,34 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 \section{Results}
     
     \paragraph{}
-    \textbf{The joint model framework returns a matrix $B$ which quantifies the effect of interacting elements $j$ (columns) on the performance of focal elements $i$ (rows). The interactions (values) which make up $B$ can be positive or negative,} non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). We illustrate the advantages of this approach in the case study results below. 
+    The joint model framework returns a matrix $B$ which quantifies the effect of interacting species $j$ (columns) on the performance of focal species $i$ (rows). The interactions (values) which make up $B$ can be positive or negative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). We illustrate the advantages of this approach in the case study results below. 
 
 
     \subsection{Case study results}
 
     \paragraph{}
-    We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. The model returned estimates for all 1144 interactions between those 22 focal species and 52 interacting species, of which \textbf{56.7\% were identifiable} and estimated by the NDDM.  When accounting for focal species only, \textbf{82.0\%} of interactions were identifiable. 
+    %We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. 
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for focal species only, 82.0\% of interactions were identifiable. 
 
     \paragraph{}
-    We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. \textbf{The joint model also returns simulated performance data for the RI model only, which we also checked visually (S.I. \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction matrix $B$.}
+    We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (S.I. \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction matrix $B$.
 
 
     %     interaction estimates for the REM peak around 0 - which can only occur if $r_i$ or $e_j$ are 0 - can discuss when this might occur (1. there exists true 0's such that some species have no effects on others - 2. some species might have both positive and negative effects so averages to 0 - 3. prior is centered on 0 and signal is too weak to be picked up)
 
 
     \paragraph{}
-    \textbf{Exact numbers below have changed - facilitation is more prevalent now}
-     For our case study, the resulting interaction matrix $B$ was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. \textbf{Here we represent $B$ as a network between all 22 focal species, taking the median value of each interaction estimate across all samples.} Though competition was the dominant interaction type,  the median value of 46.7\% of focal x neighbour interactions were facilitative, as were the medians of 43.3\% of all focal x focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much an element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Overall, 63.6\% of focal species had a median intraspecific interaction strength which was competitive. 
+    For our case study, the resulting interaction matrix $B$ was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent $B$ as a network between all 22 focal species, taking the median value of each interaction estimate across all samples. Overall, 63.6\% of focal species had a median intraspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much an element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
 
 
-     \paragraph{}
-     We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. \textbf{We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of.}
+    %\paragraph{}
+    %We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
 
 
     \subsection{Examples of ecological applications}
 
     \paragraph{}
-    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance and how these can be answered using the results from our case study. Each question below highlights some of the advantages of our resulting interaction network over the spatial-association network returned by the cooccur package: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
+    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance and how these can be answered using the results from our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of.
 
 
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
@@ -305,25 +305,15 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     %[ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their density \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g. \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite rather low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log density, however, does not return the same insights (Figure \ref{fig:coocab}).
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their density \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g. \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite rather low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). .
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textbf{Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.}
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.
 
-    
-    \subsection{Network results}
-
-    \paragraph{}
-    Quantifying species-species interaction matrices also allows us to measure network properties for the system at hand, as is commonly done for food-web, plant-pollinator, and parasite-host interactions networks \cite{}. Though many of these metrics depend on sparse matrices  (matrices with many 0's or empty entriblees), .. we were still able to calculate weighted connectance and transitivity.....
-    
     
 
 \section{Discussion}
-    
-% word count aim: 500-1000
-
-% Cut three paragraphs and tighten
 
 
     \paragraph{} 
@@ -409,7 +399,7 @@ The authors declare no competing interests.
         \begin{centering}
         % Looks like GITE is in larger font???
         \includegraphics[width=0.5\textwidth]{../../3.analyses/figures_mss/networks_C_F_cooc.png}
-        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package in R \parencite{Griffith2016}. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths for (A) and (B) are given as the median over 1000 samples. Species associations (C) were all negative and symmetrical. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
+        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths are given as the median over 1000 samples. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
         \label{fig:netwks}
        \end{centering}
     \end{figure}  
@@ -434,13 +424,13 @@ The authors declare no competing interests.
 \clearpage
 \newpage
 
-    \begin{figure}[H]
-        \begin{centering}
-        \includegraphics[width=0.4\textwidth]{../../3.analyses/figures_mss/cooccur_vs_abund.png}
-        \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log density (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from densities, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
-        \label{fig:coocab}
-        \end{centering}
-    \end{figure} 
+    % \begin{figure}[H]
+    %     \begin{centering}
+    %     \includegraphics[width=0.4\textwidth]{../../3.analyses/figures_mss/cooccur_vs_abund.png}
+    %     \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log density (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from densities, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
+    %     \label{fig:coocab}
+    %     \end{centering}
+    % \end{figure} 
 
 
 \newpage 
